--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-      - run: npm ci
+          cache: 'npm'
+      # استخدم npm install بدلاً من npm ci (لأن غالباً مفيش package-lock.json)
+      - run: npm install
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
