--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mission",
+  "name": "mission-board",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,10 +14,10 @@
     "lucide-react": "^0.468.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.3.4",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.3.4"
   }
 }
